--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,9 +25,9 @@
                 <button type="submit" class="btn btn-default">提交</button>
             </form>
             <ul class="nav navbar-nav navbar-right">
-                <li><a href="https://github.com/login/oauth/authorize?client_id=a2fe7261bc5ed91a27d8&redirect_uri=http://localhost:8991/callback&scope=user&state=1">登录</a></li>
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Joker<span class="caret"></span></a>
+                <li th:if="${session.user eq null}"><a href="https://github.com/login/oauth/authorize?client_id=a2fe7261bc5ed91a27d8&redirect_uri=http://localhost:8991/callback&scope=user&state=1">登录</a></li>
+                <li th:unless="${session.user eq null}" class="dropdown">
+                    <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
                         <li><a href="#">个人信息</a></li>
                         <li><a href="#">消息中心</a></li>
