--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -26,6 +26,9 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${session.user eq null}"><a href="https://github.com/login/oauth/authorize?client_id=a2fe7261bc5ed91a27d8&redirect_uri=http://localhost:8991/callback&scope=user&state=1">登录</a></li>
+                <li th:unless="${session.user eq null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li th:unless="${session.user eq null}" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
