--- a/src/main/resources/templates/publish.html
+++ b/src/main/resources/templates/publish.html
@@ -26,6 +26,9 @@
             </form>
             <ul class="nav navbar-nav navbar-right">
                 <li th:if="${session.user eq null}"><a href="https://github.com/login/oauth/authorize?client_id=a2fe7261bc5ed91a27d8&redirect_uri=http://localhost:8991/callback&scope=user&state=1">登录</a></li>
+                <li th:unless="${session.user eq null}">
+                    <a href="/publish">发布</a>
+                </li>
                 <li th:unless="${session.user eq null}" class="dropdown">
                     <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false" th:text="${session.user.getName()}"><span class="caret"></span></a>
                     <ul class="dropdown-menu">
@@ -44,23 +47,28 @@
         <div class="col-lg-9 col-md-12 col-sm-12 col-xs-12" >
             <h3><span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>发布</h3>
             <hr>
-            <form action="" >
+            <form action="/publish" method="post" >
                 <div class="form-group">
                     <label for="title">问题标题（简单扼要）:</label>
-                    <input type="text" class="form-control" value="" id="title" name="title" placeholder="问题标题……">
+                    <input type="text" class="form-control" th:value="${title}"  id="title" name="title"
+                           placeholder="问题标题……" >
                 </div>
                 <div class="form-group" id="question-editor">
                     <label for="description">问题补充 (必填，请参照右侧提示):</label>
-                    <textarea name="description" id="description" class="form-control" cols="30" rows="10"></textarea>
+                    <textarea name="description" id="description"  th:text="${description}"
+                              class="form-control" cols="30" rows="10"></textarea>
                 </div>
                 <div class="form-group">
-                    <label for="title">添加标签：</label>
-                    <input type="text" class="form-control" value="" id="tag" name="tag" placeholder="输入标签……">
+                    <label for="tag">添加标签：</label>
+                    <input type="text" class="form-control" th:value="${tag}" id="tag" name="tag"
+                           placeholder="输入标签……" >
                 </div>
+                <div class="alert alert-danger" role="alert" th:text="${error}" th:if="${error!=null}"></div>
+                <button type="submit" class="btn btn-success btn-publish " style="float: right;margin-bottom: 10px">
+                    发布
+                </button>
             </form>
-            <button type="submit" class="btn btn-success btn-publish " style="float: right;margin-bottom: 10px">
-                发布
-            </button>
+
         </div>
         <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12" >
             <h3>问题发起指南</h3>
